--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "googleapis": "^144.0.0",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-start": "^1.132.0",
